feat: switch auth from jwt tokens to headers from gateway, cleanup jwt dependencies and classes, add service role